add webdav support (#3)
