# route/backup.go
@@ -7,20 +7,20 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-func (a *api) GetAllBackupFolders(ctx echo.Context) error {
+func (a *api) GetAllFolderBackups(ctx echo.Context) error {
 	panic("implement me")
 }
 
-func (a *api) GetBackupFoldersByClientID(ctx echo.Context, clientID codegen.ClientIDParam) error {
+func (a *api) GetFolderBackupsByClientID(ctx echo.Context, clientID codegen.ClientIDParam) error {
 	panic("implement me")
 }
 
-func (a *api) DeleteBackupFolder(ctx echo.Context, clientID codegen.ClientIDParam, params codegen.DeleteBackupFolderParams) error {
+func (a *api) DeleteFolderBackup(ctx echo.Context, clientID codegen.ClientIDParam, params codegen.DeleteFolderBackupParams) error {
 	panic("implement me")
 }
 
-func (a *api) AddBackupFolder(ctx echo.Context, clientID codegen.ClientIDParam) error {
-	var request codegen.BackupFolderRequest
+func (a *api) AddFolderBackup(ctx echo.Context, clientID codegen.ClientIDParam) error {
+	var request codegen.FolderBackupRequest
 	if err := ctx.Bind(&request); err != nil {
 		message := err.Error()
 		return ctx.JSON(http.StatusBadRequest, codegen.ResponseBadRequest{Message: &message})
